--- a/.classpath
+++ b/.classpath
@@ -6,15 +6,15 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/solve/Documents/masterTAL/M2/S2/10_java/fop-2.6/fop/build/fop.jar"/>
-	<classpathentry kind="lib" path="C:/Users/solve/Documents/masterTAL/M2/S2/10_java/fop-2.6/fop/lib/batik-all-1.14.jar"/>
-	<classpathentry kind="lib" path="C:/Users/solve/Documents/masterTAL/M2/S2/10_java/fop-2.6/fop/lib/commons-io-1.3.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/solve/Documents/masterTAL/M2/S2/10_java/fop-2.6/fop/lib/commons-logging-1.0.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/solve/Documents/masterTAL/M2/S2/10_java/fop-2.6/fop/lib/fontbox-2.0.19.jar"/>
-	<classpathentry kind="lib" path="C:/Users/solve/Documents/masterTAL/M2/S2/10_java/fop-2.6/fop/lib/serializer-2.7.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/solve/Documents/masterTAL/M2/S2/10_java/fop-2.6/fop/lib/xalan-2.7.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/solve/Documents/masterTAL/M2/S2/10_java/fop-2.6/fop/lib/xercesImpl-2.12.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/solve/Documents/masterTAL/M2/S2/10_java/fop-2.6/fop/lib/xml-apis-ext-1.3.04.jar"/>
-	<classpathentry kind="lib" path="C:/Users/solve/Documents/masterTAL/M2/S2/10_java/fop-2.6/fop/lib/xmlgraphics-commons-2.6.jar"/>
+	<classpathentry kind="lib" path="fop-2.6/fop/build/fop.jar"/>
+	<classpathentry kind="lib" path="fop-2.6/fop/lib/batik-all-1.14.jar"/>
+	<classpathentry kind="lib" path="fop-2.6/fop/lib/commons-io-1.3.1.jar"/>
+	<classpathentry kind="lib" path="fop-2.6/fop/lib/commons-logging-1.0.4.jar"/>
+	<classpathentry kind="lib" path="fop-2.6/fop/lib/fontbox-2.0.19.jar"/>
+	<classpathentry kind="lib" path="fop-2.6/fop/lib/serializer-2.7.2.jar"/>
+	<classpathentry kind="lib" path="fop-2.6/fop/lib/xalan-2.7.2.jar"/>
+	<classpathentry kind="lib" path="fop-2.6/fop/lib/xercesImpl-2.12.0.jar"/>
+	<classpathentry kind="lib" path="fop-2.6/fop/lib/xml-apis-ext-1.3.04.jar"/>
+	<classpathentry kind="lib" path="fop-2.6/fop/lib/xmlgraphics-commons-2.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
