--- a/.classpath
+++ b/.classpath
@@ -16,5 +16,6 @@
 	<classpathentry kind="lib" path="fop-2.6/fop/lib/xercesImpl-2.12.0.jar"/>
 	<classpathentry kind="lib" path="fop-2.6/fop/lib/xml-apis-ext-1.3.04.jar"/>
 	<classpathentry kind="lib" path="fop-2.6/fop/lib/xmlgraphics-commons-2.6.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
