--- a/.classpath
+++ b/.classpath
@@ -6,17 +6,17 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="fop-2.6/fop/build/fop.jar"/>
-	<classpathentry kind="lib" path="fop-2.6/fop/lib/batik-all-1.14.jar"/>
-	<classpathentry kind="lib" path="fop-2.6/fop/lib/commons-io-1.3.1.jar"/>
-	<classpathentry kind="lib" path="fop-2.6/fop/lib/commons-logging-1.0.4.jar"/>
-	<classpathentry kind="lib" path="fop-2.6/fop/lib/fontbox-2.0.19.jar"/>
-	<classpathentry kind="lib" path="fop-2.6/fop/lib/serializer-2.7.2.jar"/>
-	<classpathentry kind="lib" path="fop-2.6/fop/lib/xalan-2.7.2.jar"/>
-	<classpathentry kind="lib" path="fop-2.6/fop/lib/xercesImpl-2.12.0.jar"/>
-	<classpathentry kind="lib" path="fop-2.6/fop/lib/xml-apis-ext-1.3.04.jar"/>
-	<classpathentry kind="lib" path="fop-2.6/fop/lib/xmlgraphics-commons-2.6.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry kind="lib" path="itext/itextpdf-5.5.13.jar"/>
+	<classpathentry kind="lib" path="lib/batik-all-1.14.jar"/>
+	<classpathentry kind="lib" path="lib/commons-io-1.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.0.4.jar"/>
+	<classpathentry kind="lib" path="lib/fontbox-2.0.19.jar"/>
+	<classpathentry kind="lib" path="lib/fop.jar"/>
+	<classpathentry kind="lib" path="lib/itextpdf-5.5.13.jar"/>
+	<classpathentry kind="lib" path="lib/serializer-2.7.2.jar"/>
+	<classpathentry kind="lib" path="lib/xalan-2.7.2.jar"/>
+	<classpathentry kind="lib" path="lib/xercesImpl-2.12.0.jar"/>
+	<classpathentry kind="lib" path="lib/xml-apis-ext-1.3.04.jar"/>
+	<classpathentry kind="lib" path="lib/xmlgraphics-commons-2.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
